Change the version of gradle down to 6.9.4