@@ -5,8 +5,11 @@ import org.acc.service.sdk.data.ShopData;
 import org.acc.service.sdk.data.UserBalance;
 import org.acc.service.sdk.data.UserData;
 import org.acc.service.sdk.data.payment.PaymentTaskItem;
+import org.acc.service.sdk.data.payment.PaymentTaskItemShort;
 import org.acc.service.sdk.data.purchase.PurchaseDetail;
 import org.acc.service.sdk.data.purchase.ResponseSavePurchase;
+import org.acc.service.sdk.data.settlement.ChainInfo;
+import org.acc.service.sdk.data.settlement.ShopRefundableData;
 import org.acc.service.sdk.utils.Amount;
 import org.acc.service.sdk.utils.CommonUtils;
 import org.junit.jupiter.api.Assertions;
@@ -71,7 +74,7 @@ class SettlementClientTest {
         users.add(new UserData("+82 10-1000-2004", "0xb93f43bdafc9efee5b223735a0dd4efef9522f2db5b9f70889d6fa6fcead50c4"));
 
         purchaseShopId = shops.get(5).shopId;
-        userAccount = users.getFirst().address;
+        userAccount = users.get(0).address;
 
         SavePurchase();
         Payment();
@@ -126,7 +129,7 @@ class SettlementClientTest {
         try {
             // Create User Client
             System.out.println("[ Create User Client ]");
-            PaymentClientForUser userClient = new PaymentClientForUser(network, users.getFirst().privateKey);
+            PaymentClientForUser userClient = new PaymentClientForUser(network, users.get(0).privateKey);
 
             // Create Client
             System.out.println("[ Create Client ]");
@@ -162,7 +165,7 @@ class SettlementClientTest {
 
                 // Approval New Payment
                 System.out.println("[ Approval New Payment ]");
-                var res = userClient.approveNewPayment(
+                PaymentTaskItemShort res = userClient.approveNewPayment(
                         paymentItem.paymentId,
                         paymentItem.purchaseId,
                         paymentItem.amount,
@@ -178,7 +181,7 @@ class SettlementClientTest {
 
                 // Close New Payment
                 System.out.println("[ Close New Payment ]");
-                var res2 = client.closeNewPayment(paymentItem.paymentId, true);
+                PaymentTaskItem res2 = client.closeNewPayment(paymentItem.paymentId, true);
                 assertEquals(res2.paymentId, paymentItem.paymentId);
 
                 // Waiting...
@@ -224,7 +227,7 @@ class SettlementClientTest {
         try {
             for (ShopData shop : shops)
             {
-                var shopClient = new SettlementClientForShop(network, shop.privateKey, shop.shopId);
+                SettlementClientForShop shopClient = new SettlementClientForShop(network, shop.privateKey, shop.shopId);
                 shopClient.removeSettlementManager();
             }
         } catch (Exception e) {
@@ -237,7 +240,7 @@ class SettlementClientTest {
         try {
             for (ShopData shop : activeShops)
             {
-                var shopClient = new SettlementClientForShop(network, shop.privateKey, shop.shopId);
+                SettlementClientForShop shopClient = new SettlementClientForShop(network, shop.privateKey, shop.shopId);
                 shopClient.setSettlementManager(settlementClientForManager.getShopId());
             }
         } catch (Exception e) {
@@ -248,8 +251,8 @@ class SettlementClientTest {
     void Settlement04_Check() {
         System.out.println("[ Settlement04_Check ]");
         try {
-            var length = settlementClient.getSettlementClientLength();
-            Assertions.assertEquals(length, 6);
+            long length = settlementClient.getSettlementClientLength();
+            Assertions.assertEquals(6, length);
         } catch (Exception e) {
             assertEquals("some exception message...", e.getMessage());
         }
@@ -258,8 +261,8 @@ class SettlementClientTest {
     void Settlement05_CollectSettlementAmount() {
         System.out.println("[ Settlement05_CollectSettlementAmount ]");
         try {
-            var clientLength = settlementClient.getSettlementClientLength();
-            var clientList = settlementClient.getSettlementClientList(0, clientLength);
+            long clientLength = settlementClient.getSettlementClientLength();
+            ArrayList<String> clientList = settlementClient.getSettlementClientList(0, clientLength);
             settlementClient.collectSettlementAmountMultiClient(clientList);
         } catch (Exception e) {
             assertEquals("some exception message...", e.getMessage());
@@ -280,9 +283,9 @@ class SettlementClientTest {
         try {
             for (ShopData shop : activeShops)
             {
-                var shopClient = new SettlementClientForShop(network, shop.privateKey, shop.shopId);
-                var res = shopClient.getRefundable();
-                Assertions.assertEquals(res.refundableAmount, BigInteger.ZERO);
+                SettlementClientForShop shopClient = new SettlementClientForShop(network, shop.privateKey, shop.shopId);
+                ShopRefundableData res = shopClient.getRefundable();
+                Assertions.assertEquals(BigInteger.ZERO, res.refundableAmount);
             }
         } catch (Exception e) {
             assertEquals("some exception message...", e.getMessage());
@@ -292,16 +295,16 @@ class SettlementClientTest {
     void Settlement08_RefundOfManager() {
         System.out.println("[ Settlement08_RefundOfManager ]");
         try {
-            var refundableData =  settlementClient.getRefundable();
-            var refundableAmount = refundableData.refundableAmount;
-            var refundableToken = refundableData.refundableToken;
+            ShopRefundableData refundableData =  settlementClient.getRefundable();
+            BigInteger refundableAmount = refundableData.refundableAmount;
+            BigInteger refundableToken = refundableData.refundableToken;
 
-            var accountOfShop = settlementClient.getAccountOfShopOwner();
-            var res1 = settlementClient.getBalanceAccount(accountOfShop);
+            String accountOfShop = settlementClient.getAccountOfShopOwner();
+            UserBalance res1 = settlementClient.getBalanceAccount(accountOfShop);
 
             settlementClient.refund(refundableAmount);
 
-            var res2 = settlementClient.getBalanceAccount(accountOfShop);
+            UserBalance res2 = settlementClient.getBalanceAccount(accountOfShop);
 
             Assertions.assertEquals(res2.token.balance, res1.token.balance.add(refundableToken));
         } catch (Exception e) {
@@ -321,11 +324,11 @@ class SettlementClientTest {
     void Settlement10_Withdrawal() {
         System.out.println("[ Settlement10_Withdrawal ]");
         try {
-            var chainInfo = settlementClient.getChainInfoOfSideChain();
-            var accountOfShop = settlementClient.getAccountOfShopOwner();
-            var res2 = settlementClient.getBalanceAccount(accountOfShop);
-            var balanceOfToken = res2.token.balance;
-            var balanceMainChain1 = settlementClient.getBalanceOfMainChainToken(accountOfShop);
+            ChainInfo chainInfo = settlementClient.getChainInfoOfSideChain();
+            String accountOfShop = settlementClient.getAccountOfShopOwner();
+            UserBalance res2 = settlementClient.getBalanceAccount(accountOfShop);
+            BigInteger balanceOfToken = res2.token.balance;
+            BigInteger balanceMainChain1 = settlementClient.getBalanceOfMainChainToken(accountOfShop);
             settlementClient.withdraw(balanceOfToken);
 
             long t1 = CommonUtils.getTimeStamp();
